Standardizate code - Phase 1
