# src/interfaces/controllers/customerRoutes.ts
@@ -1,49 +1,0 @@
-import express from 'express';
-
-const router = express.Router();
-
-// const customerRepository = new CustomerRepository(); // Add MONGODB implementation
-// const createCustomer = new CreateCustomer(customerRepository as ICustomerRepository);
-// const viewCustomer = new ViewCustomer(customerRepository as ICustomerRepository);
-
-router.post('/', async (req, res) => {
-    try {
-        const customerData = req.body;
-        // const customer = await createCustomer.execute(customerData);
-        // res.status(201).json(customer);
-    } catch (error: any) {
-        res.status(400).json({ message: error.message });
-    }
-});
-
-router.get('/:id', async (req, res) => {
-    try {
-        const id = req.params.id;
-        // const customer = await viewCustomer.executeById(id);
-        // res.json(customer);
-    } catch (error: any) {
-        res.status(400).json({ message: error.message });
-    }
-});
-
-router.get('/cpf/:cpf', async (req, res) => {
-    try {
-        const cpf = req.params.cpf;
-        // const customer = await viewCustomer.executeByCPF(cpf);
-        // res.json(customer);
-    } catch (error: any) {
-        res.status(400).json({ message: error.message });
-    }
-});
-
-router.get('/email/:email', async (req, res) => {
-    try {
-        const email = req.params.email;
-        // const customer = await viewCustomer.executeByEmail(email);
-        // res.json(customer);
-    } catch (error: any) {
-        res.status(400).json({ message: error.message });
-    }
-});
-
-export default router;
